<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="intro">Intro</string>
    <string name="heart_rate_values">Heart Rate Values</string>
    <string name="body_temperature_values">Body Temperature Values</string>
    <string name="breathing_rate_values">Breathing Rate Values</string>
    <string name="body_statistics">Body Statistics</string>
    <string name="hrt">Heart</string>
    <string name="tmp">Temp</string>
    <string name="brt">Breath</string>
    <string name="bedsmart">BedSmart</string>
    <string name="yov">yo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>